fixed spacing

--- a/backend/static/style.css
+++ b/backend/static/style.css
@@ -76,6 +76,25 @@ form button {
 
 }
 
+form .restrictions {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+form .restrictions input {
+    width: 15px;
+    height: 15px;
+    padding: 0;
+    margin: 0;
+    vertical-align: bottom;
+    position: relative;
+    top: -1px;
+}
+form .restrictions label {
+    padding-left: 15px;
+
+}
+
 
 .logo img {
     display: flex;
